# biathlonresults

./: .travis.yml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: main.yml  python-package.yml  python-publish.yml
biathlonresults/: __init__.py  api.py  consts.py
examples/: athletes.ipynb  world_cup_schedule_and_results.ipynb  world_cup_scores.ipynb
tests/: test_api.py
